# yview

./: Dockerfile  README.md  docker-compose.yml  overview_diagram.odg
android/: build.gradle  local.properties
assets/: pip_requirements.txt  python-icons-rpc-provider-1.0-all.deb  python-pjalib-3.5-all.deb
debian/: control  postinst  preinst
embedded_devices/drv8825_stepper_motor/: mos.yml  wload.sh
embedded_devices/mgos/: README.md  build.py  mos.yml
embedded_devices/ysg/: README.md
gui/android/: .gitignore  README.md  build.gradle
gui/java/: .gitignore  (+3 more)
icons/: Dockerfile  README.md  build.sh  docker-compose.yml  restart.sh
icons_gw/: .gitignore  Pipfile  README.md  build.sh  clean.sh  create_pip_env.sh  create_poetry_env.sh  icons_gw.py  icons_json_check.py  install.sh  mqtt_subscribe.py  pyproject.toml  setup.py  uninstall.sh
icons_gw/debian/: control  postinst  preinst
icons_gw/icons_gw/: __main__.py  icons_gw.py  icons_json_check.py  mqtt_subscribe.py
icons_gw/lib/: icons_mqtt_rpc_provider.py
icons_gw/python/: icons_gw.py  icons_json_check.py  mqtt_subscribe.py
icons_gw/scripts/: icons_gw  icons_json_check  mqtt_subscribe
icons_rpc_provider/: README.md  build.sh  create_poetry_env.sh  pyproject.toml
icons_rpc_provider/debian/: control  control.orig
icons_rpc_provider/icons_rpc_provider/: icons_mqtt_rpc_provider.py
icons_rpc_provider/python/: icons_mqtt_rpc_provider.py
java/: LICENSE.txt  README.md  build.sh
python/: icons_gw.py  icons_json_check.py  icons_mqtt_rpc_provider.py  mqtt_subscribe.py
ydev/: .gitignore  LICENSE  Pipfile  README.md  build.sh  clean.sh  create_poetry_env.sh  deploy.sh  install.sh  pyproject.toml  setup.py  uninstall.sh  ydev.py
ydev/debian/: control  postinst  postrm
ydev/installers/: ydev-3.8.3-py3-none-any.whl  ydev-3.8.4-py3-none-any.whl
ydev/python/: ydev.py
ydev/scripts/: ydev
ydev/ydev/: ydev.py
ydev2db/: .gitignore  Pipfile  build.sh  create_pip_env.sh  dba.py  ydev2db.py
(+161 files in other folders)
